@@ -20,6 +20,8 @@ import org.openforis.collect.android.viewmodel.*;
 
 import java.util.Map;
 
+import static android.view.ViewGroup.LayoutParams.MATCH_PARENT;
+
 
 /**
  * @author Daniel Wiell
@@ -58,8 +60,6 @@ public abstract class NodeDetailFragment<T extends UiNode> extends Fragment {
 
         FrameLayout frameLayout = new FrameLayout(getActivity());
         frameLayout.addView(scrollView);
-//        frameLayout.addView(rootView);
-//        if (Build.VERSION.SDK_INT > Build.VERSION_CODES.JELLY_BEAN)
         frameLayout.addView(createOverlay());
         return frameLayout;
     }
@@ -72,10 +72,9 @@ public abstract class NodeDetailFragment<T extends UiNode> extends Fragment {
         super.onResume();
     }
 
-    //    @TargetApi(Build.VERSION_CODES.JELLY_BEAN)
     private View createOverlay() {
         overlay = new LinearLayout(getActivity());
-        overlay.setLayoutParams(new LinearLayout.LayoutParams(ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.MATCH_PARENT));
+        overlay.setLayoutParams(new LinearLayout.LayoutParams(MATCH_PARENT, MATCH_PARENT));
         updateOverlay();
         return overlay;
     }
